Fix AuthRequest order
